--- a/rating.html
+++ b/rating.html
@@ -301,11 +301,11 @@
               <th class="col-move">​↕️</th>
               <th class="col-team">Команда</th>
 
-              <th class="col-stage">Е1<br>місце / бали</th>
-              <th class="col-stage">Е2<br>місце / бали</th>
-              <th class="col-stage">Е3<br>місце / бали</th>
-              <th class="col-stage">Е4<br>місце / бали</th>
-              <th class="col-stage">Е5<br>місце / бали</th>
+              <th class="col-stage">Е1<br>м / бали</th>
+              <th class="col-stage">Е2<br>м / бали</th>
+              <th class="col-stage">Е3<br>м / бали</th>
+              <th class="col-stage">Е4<br>м / бали</th>
+              <th class="col-stage">Е5<br>м / бали</th>
 
               <th class="col-points">Бали<br>сезону</th>
               <th class="col-final">Фінал<br>місце</th>
@@ -390,14 +390,14 @@
           <thead>
             <tr>
               <th class="col-place">Місце</th>
-              <th class="col-move">Рух</th>
+              <th class="col-move">​↕️</th>
               <th class="col-team">Команда</th>
 
-              <th class="col-stage">Е1<br>місце / бали</th>
-              <th class="col-stage">Е2<br>місце / бали</th>
-              <th class="col-stage">Е3<br>місце / бали</th>
-              <th class="col-stage">Е4<br>місце / бали</th>
-              <th class="col-stage">Е5<br>місце / бали</th>
+              <th class="col-stage">Е1<br>м / бали</th>
+              <th class="col-stage">Е2<br>м / бали</th>
+              <th class="col-stage">Е3<br>м / бали</th>
+              <th class="col-stage">Е4<br>м / бали</th>
+              <th class="col-stage">Е5<br>м / бали</th>
 
               <th class="col-points">Бали<br>сезону</th>
               <th class="col-final">Фінал<br>місце</th>
