--- a/rating.html
+++ b/rating.html
@@ -309,10 +309,10 @@
       <div class="kicker title-gradient">СЕЗОН 2026</div>
       <h1 class="page-title title-gradient">Рейтинг сезону STOLAR CARP 2026</h1>
       <p class="lead rating-desc">
-        Протягом сезону команди змагаються на кількох етапах STOLAR CARP, набираючи вагу та результати
-        у своїх зонах. Після завершення всіх етапів формується загальний рейтинг, за яким
-        <b>18 найкращих команд сезону</b> отримують путівку до
-        <b>Фіналу сезону STOLAR CARP 2026</b>.
+        Рейтинг сезону STOLAR CARP — це офіційна підсумкова таблиця результатів команд за всі етапи сезону. Розташування в рейтингу визначається за сумою балів (менше — краще), а при рівності балів вирішальними є загальна вага вилову та Big Fish сезону.
+        У таблиці відображаються місце та бали команди за кожен етап.
+        <b>18 найкращих команд сезону</b> отримують право участі у 
+        <b>Фіналі сезону STOLAR CARP </b>.
         Саме там кращі з кращих розігрують головний титул року.
       </p>
       <div class="rating-tags">
