--- a/rating.html
+++ b/rating.html
@@ -337,11 +337,11 @@
               <th class="col-move">Рух</th>
               <th class="col-team">Команда</th>
 
-              <th class="col-stage">Е1<br>м / бали</th>
-              <th class="col-stage">Е2<br>м / бали</th>
-              <th class="col-stage">Е3<br>м / бали</th>
-              <th class="col-stage">Е4<br>м / бали</th>
-              <th class="col-stage">Е5<br>м / бали</th>
+              <th class="col-stage">Е1<br>м / б</th>
+              <th class="col-stage">Е2<br>м / б</th>
+              <th class="col-stage">Е3<br>м / б</th>
+              <th class="col-stage">Е4<br>м / б</th>
+              <th class="col-stage">Е5<br>м / б</th>
 
               <th class="col-points">Бали<br>сезону</th>
               <th class="col-final">Фінал<br>місце</th>
@@ -668,11 +668,11 @@
               <th class="col-move">Рух</th>
               <th class="col-team">Команда</th>
 
-              <th class="col-stage">Е1<br>м / бали</th>
-              <th class="col-stage">Е2<br>м / бали</th>
-              <th class="col-stage">Е3<br>м / бали</th>
-              <th class="col-stage">Е4<br>м / бали</th>
-              <th class="col-stage">Е5<br>м / бали</th>
+              <th class="col-stage">Е1<br>м / б</th>
+              <th class="col-stage">Е2<br>м / б</th>
+              <th class="col-stage">Е3<br>м / б</th>
+              <th class="col-stage">Е4<br>м / б</th>
+              <th class="col-stage">Е5<br>м / б</th>
 
               <th class="col-points">Бали<br>сезону</th>
               <th class="col-final">Фінал<br>місце</th>
@@ -692,7 +692,7 @@
 
 <footer class="footer">
   <div class="container footer__row">
-    <div>© 2025 STOLAR CARP · Львівщина</div>
+    <div>© 2025 STOLAR CARP · Львів</div>
     <div class="footer__links">
       <a href="https://invite.viber.com/?g=8R04gUEhdVSnX6sr_DxGGGqAXTus0Ygh" rel="noopener">Viber</a>
       <a href="https://youtube.com/@dk-stolarcarp?si=H-BUK2msCiKXdcA9" rel="noopener">YouTube</a>
