--- a/rating.html
+++ b/rating.html
@@ -148,12 +148,12 @@
 
     /* === ШИРИНИ КОЛОНОК (сума ~100%) === */
     .col-place  { width:9%; }   /* місце */
-    .col-move   { width:6%; }   /* рух */
+    .col-move   { width:5%; }   /* рух */
     .col-team   { width:20%; }
     .col-stage  { width:6%; }   /* 5 етапів = 30% */
     .col-points { width:9%; }   /* бали сезону */
     .col-final  { width:7%; }   /* місце у фіналі */
-    .col-weight { width:11%; }
+    .col-weight { width:10%; }
     .col-big    { width:10%; }
 
     /* Місце */
@@ -162,7 +162,7 @@
       font-size:.9rem;
       line-height:1;
       font-weight:700;
-      padding-left:6px;          /* відступ від жовтої лінії */
+      padding-left:5px;          /* відступ від жовтої лінії */
     }
 
     /* Рух */
@@ -334,7 +334,7 @@
           <thead>
             <tr>
               <th class="col-place">Місце</th>
-              <th class="col-move">Рух</th>
+              <th class="col-move">-/+</th>
               <th class="col-team">Команда</th>
 
               <th class="col-stage">Е1<br>м / б</th>
@@ -665,7 +665,7 @@
           <thead>
             <tr>
               <th class="col-place">Місце</th>
-              <th class="col-move">Рух</th>
+              <th class="col-move">+/-</th>
               <th class="col-team">Команда</th>
 
               <th class="col-stage">Е1<br>м / б</th>
