--- a/rating.html
+++ b/rating.html
@@ -147,12 +147,12 @@
     }
 
     /* === ШИРИНИ КОЛОНОК (сума ~100%) === */
-    .col-place  { width:9%; }   /* місце */
+    .col-place  { width:8%; }   /* місце */
     .col-move   { width:5%; }   /* рух */
     .col-team   { width:20%; }
     .col-stage  { width:6%; }   /* 5 етапів = 30% */
     .col-points { width:9%; }   /* бали сезону */
-    .col-final  { width:7%; }   /* місце у фіналі */
+    .col-final  { width:8%; }   /* місце у фіналі */
     .col-weight { width:10%; }
     .col-big    { width:10%; }
 
@@ -343,10 +343,10 @@
               <th class="col-stage">Е4<br>м / б</th>
               <th class="col-stage">Е5<br>м / б</th>
 
-              <th class="col-points">Бали<br>сезону</th>
-              <th class="col-final">Фінал<br>місце</th>
-              <th class="col-weight">Загальна вага<br>сезону, кг</th>
-              <th class="col-big">Big Fish<br>сезону, кг</th>
+              <th class="col-points">Бали</th>
+              <th class="col-final">Фінал</th>
+              <th class="col-weight">Вага</th>
+              <th class="col-big">Big Fish</th>
             </tr>
           </thead>
           <tbody id="season-top">
@@ -674,10 +674,10 @@
               <th class="col-stage">Е4<br>м / б</th>
               <th class="col-stage">Е5<br>м / б</th>
 
-              <th class="col-points">Бали<br>сезону</th>
-              <th class="col-final">Фінал<br>місце</th>
-              <th class="col-weight">Загальна вага<br>сезону, кг</th>
-              <th class="col-big">Big Fish<br>сезону, кг</th>
+              <th class="col-points">Бали</th>
+              <th class="col-final">Фінал</th>
+              <th class="col-weight">Вага</th>
+              <th class="col-big">Big Fish</th>
             </tr>
           </thead>
           <tbody id="season-contenders">
