--- a/rating.html
+++ b/rating.html
@@ -327,7 +327,7 @@
 
     <!-- Рейтинг команд сезону — ТОП-18 -->
     <div class="card card--season">
-      <h3>Рейтинг команд сезону 2026</h3>
+      <h3>Рейтинг команд сезону </h3>
 
       <div class="season-table-wrapper">
         <table class="table table--season table--main">
@@ -645,15 +645,6 @@
         </table>
       </div>
 
-      <p class="rating-note">
-        Підсумкове місце сезону визначається так:
-        <b>1)</b> менша сума балів сезону — краще місце;
-        <b>2)</b> якщо бали однакові — вище команда з більшою загальною вагою;
-        <b>3)</b> якщо вага теж однакова — вище команда з більшим Big Fish.
-        У колонках етапів показано <b>місце / набрані бали</b>. Незаповнені етапи відображаються як <b>– / –</b>
-        і не враховуються до суми, поки етап не завершено. Колонка «Фінал» показує тільки місце команди у фіналі.
-      </p>
-
       <!-- Блок претендентів -->
       <h4 class="subhead">
         Претенденти на участь у Фіналі сезону
@@ -686,6 +677,17 @@
         </table>
       </div>
     </div>
+
+    <p class="rating-note">
+  Підсумкове місце сезону визначається так:
+  <b>1)</b> менша сума балів сезону — краще місце;<br>
+  <b>2)</b> якщо бали однакові — вище команда з більшою загальною вагою;<br>
+  <b>3)</b> якщо вага теж однакова — вище команда з більшим Big Fish.<br><br>
+
+  У колонках етапів показано <b>місце / набрані бали</b>.<br>
+  Незаповнені етапи відображаються як <b>– / –</b> і не враховуються до суми, поки етап не завершено.<br>
+  Колонка «Фінал» показує тільки місце команди у фіналі.
+    </p>
 
   </section>
 </main>
