--- a/rating.html
+++ b/rating.html
@@ -679,7 +679,7 @@
     </div>
 
     <p class="rating-note">
-  Підсумкове місце сезону визначається так:
+  Підсумкове місце сезону визначається так:<br>
   <b>1)</b> менша сума балів сезону — краще місце;<br>
   <b>2)</b> якщо бали однакові — вище команда з більшою загальною вагою;<br>
   <b>3)</b> якщо вага теж однакова — вище команда з більшим Big Fish.<br><br>
