--- a/rating.html
+++ b/rating.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Рейтинг сезону 2026 — STOLAR CARP</title>
+  <title>Рейтинг сезону — STOLAR CARP</title>
   <link rel="stylesheet" href="assets/css/main.css">
   <script defer src="assets/js/config.js"></script>
   <style>
@@ -320,7 +320,6 @@
       </p>
       <div class="rating-tags">
         <span class="pill">✔ Сукупний рейтинг за всі етапи</span>
-        <span class="pill">✔ Спочатку бали, потім вага і Big Fish</span>
         <span class="pill">✔ До фіналу проходить 18 команд</span>
       </div>
     </div>
