--- a/rating.html
+++ b/rating.html
@@ -310,7 +310,7 @@
     <!-- Преміальний заголовок сезону -->
     <div class="season-rating-head">
       <div class="kicker title-gradient">СЕЗОН 2026</div>
-      <h1 class="page-title title-gradient">Рейтинг сезону STOLAR CARP 2026</h1>
+      <h1 class="page-title title-gradient">Рейтинг сезону STOLAR CARP </h1>
       <p class="lead rating-desc">
         Рейтинг сезону STOLAR CARP — це офіційна підсумкова таблиця результатів команд за всі етапи сезону. Розташування в рейтингу визначається за сумою балів (менше — краще), а при рівності балів вирішальними є загальна вага вилову та Big Fish сезону.
         У таблиці відображаються місце та бали команди за кожен етап.
