--- a/rating.html
+++ b/rating.html
@@ -333,7 +333,7 @@
           <thead>
             <tr>
               <th class="col-place">Місце</th>
-              <th class="col-move">-/+</th>
+              <th class="col-move">▲▼</th>
               <th class="col-team">Команда</th>
 
               <th class="col-stage">Е1<br>м / б</th>
@@ -655,7 +655,7 @@
           <thead>
             <tr>
               <th class="col-place">Місце</th>
-              <th class="col-move">+/-</th>
+              <th class="col-move">▲▼</th>
               <th class="col-team">Команда</th>
 
               <th class="col-stage">Е1<br>м / б</th>
