--- a/lakes.html
+++ b/lakes.html
@@ -276,8 +276,9 @@
           </div>
           <div class="actions">
             <a class="btn-route" target="_blank" rel="noopener"
-               href="https://www.google.com/maps/search/?api=1&query=Пристань+водойма">
-              Маршрут на Google Maps
+            <a class="btn-route" target="_blank" rel="noopener"
+               href="https://www.google.com/maps/search/?api=1&query=50.224026,23.944066">
+  Маршрут на Google Maps
             </a>
           </div>
         </div>
