--- a/lakes.html
+++ b/lakes.html
@@ -254,8 +254,8 @@
           </div>
           <div class="actions">
             <a class="btn-route" target="_blank" rel="noopener"
-               href="https://www.google.com/maps/search/?api=1&query=Лелехівка+Львівська+область">
-              Маршрут на Google Maps
+   href="https://www.google.com/maps/search/?api=1&query=49.955633,23.674474">
+  Маршрут на Google Maps
             </a>
           </div>
         </div>
