--- a/lakes.html
+++ b/lakes.html
@@ -299,8 +299,8 @@
           </div>
           <div class="actions">
             <a class="btn-route" target="_blank" rel="noopener"
-               href="https://www.google.com/maps/search/?api=1&query=Fishing+pond+Bounty">
-              Маршрут на Google Maps
+               href="https://www.google.com/maps/search/?api=1&query=49.989020,23.513452">
+  Маршрут на Google Maps
             </a>
           </div>
         </div>
