--- a/sponsors.html
+++ b/sponsors.html
@@ -9,42 +9,236 @@
   <script defer src="assets/js/config.js"></script>
 
   <style>
-    .grid{display:grid;gap:24px;margin-top:24px}
-    .grid-3{grid-template-columns:repeat(auto-fit,minmax(260px,1fr))}
+    /* Фон сторінки (легкий градієнт зверху) */
+    body{
+      background:
+        radial-gradient(circle at top,#1f2937 0,#05060a 55%);
+    }
 
-    .card{
-      background:#14151a;
-      border:1px solid rgba(255,255,255,.12);
+    /* HERO блок */
+    .sponsors-hero{
+      text-align:center;
+      margin-top:18px;
+      margin-bottom:22px;
+    }
+    .sponsors-kicker{
+      display:inline-flex;
+      align-items:center;
+      gap:8px;
+      padding:4px 11px;
+      border-radius:999px;
+      font-size:.8rem;
+      letter-spacing:.16em;
+      text-transform:uppercase;
+      background:rgba(0,0,0,.45);
+      border:1px solid rgba(248,250,252,.18);
+      color:#e5e7eb;
+      margin-bottom:10px;
+    }
+    .sponsors-kicker span{
+      display:inline-flex;
+      align-items:center;
+      justify-content:center;
+      width:18px;
+      height:18px;
+      border-radius:50%;
+      background:linear-gradient(135deg,#f6c34c,#cc6a2b);
+      color:#000;
+      font-weight:800;
+      font-size:.7rem;
+    }
+
+    .page-title{
+      margin:0;
+    }
+    .page-title span{display:block;}
+    .page-title span:nth-child(1){
+      font-size:clamp(26px,4vw,32px);
+      text-transform:uppercase;
+      letter-spacing:.08em;
+    }
+    .page-title span:nth-child(2){
+      font-size:clamp(30px,4.6vw,40px);
+      font-weight:900;
+    }
+    .page-title.title-gradient{
+      animation: scGlowPulse 3.6s ease-in-out infinite;
+      text-shadow:
+        0 0 10px rgba(246,195,76,0.55),
+        0 0 22px rgba(122,15,43,0.55),
+        0 0 40px rgba(0,0,0,0.8);
+      margin-bottom:4px;
+    }
+    @keyframes scGlowPulse{
+      0%{
+        text-shadow:
+          0 0 6px rgba(246,195,76,0.35),
+          0 0 16px rgba(122,15,43,0.35),
+          0 0 30px rgba(0,0,0,0.6);
+        transform:translateY(0);
+      }
+      50%{
+        text-shadow:
+          0 0 14px rgba(246,195,76,0.85),
+          0 0 30px rgba(122,15,43,0.85),
+          0 0 46px rgba(0,0,0,0.9);
+        transform:translateY(-1px);
+      }
+      100%{
+        text-shadow:
+          0 0 6px rgba(246,195,76,0.35),
+          0 0 16px rgba(122,15,43,0.35),
+          0 0 30px rgba(0,0,0,0.6);
+        transform:translateY(0);
+      }
+    }
+
+    .sponsors-lead{
+      max-width:720px;
+      margin:10px auto 0;
+      color:#d1d5db;
+      font-size:.95rem;
+    }
+
+    .sponsors-hero::after{
+      content:"";
+      display:block;
+      margin:16px auto 0;
+      width:140px;
+      height:2px;
+      border-radius:999px;
+      background:linear-gradient(90deg,#f6c34c 0%,#cc6a2b 50%,#7a0f2b 100%);
+      box-shadow:0 0 12px rgba(246,195,76,0.6);
+      opacity:.9;
+    }
+    @media (max-width:520px){
+      .sponsors-hero::after{width:90px;}
+    }
+
+    /* Сітка карток */
+    .sponsors-grid{
+      display:grid;
+      grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
+      gap:20px;
+      margin-top:24px;
+    }
+
+    .sponsor-card{
+      position:relative;
+      overflow:hidden;
       border-radius:18px;
       padding:0;
-      overflow:hidden;
-      height:220px;             /* базова висота */
+      background:radial-gradient(circle at top,#1e293b 0,#020617 60%);
+      border:1px solid rgba(148,163,184,.45);
+      box-shadow:0 16px 40px rgba(0,0,0,.7);
+      min-height:190px;
       display:flex;
       align-items:center;
       justify-content:center;
-      transition:transform .2s ease,border-color .2s ease;
+      cursor:pointer;
+      transition:transform .2s ease, box-shadow .2s ease, border-color .2s ease;
+      text-decoration:none;
     }
     @media (min-width:900px){
-      .card{height:260px}       /* трохи вища на десктопі */
-    }
-    .card:hover{
-      transform:scale(1.02);
-      border-color:rgba(255,255,255,.22);
+      .sponsor-card{min-height:220px;}
     }
 
-    /* Лого не обрізаємо: вміщаємо всередину й центруємо */
-    .s-logo{
+    .sponsor-card::before{
+      content:"";
+      position:absolute;
+      inset:-40%;
+      background:
+        radial-gradient(circle at top left,rgba(250,204,21,.10) 0,transparent 60%),
+        radial-gradient(circle at bottom right,rgba(56,189,248,.12) 0,transparent 60%);
+      opacity:.9;
+      pointer-events:none;
+      transition:opacity .25s ease, transform .25s ease;
+    }
+
+    .sponsor-card:hover{
+      transform:translateY(-3px);
+      border-color:rgba(250,204,21,.7);
+      box-shadow:0 20px 50px rgba(0,0,0,.85);
+    }
+    .sponsor-card:hover::before{
+      opacity:1;
+      transform:translate3d(0,-4px,0);
+    }
+
+    .sponsor-logo-wrap{
+      position:relative;
+      z-index:1;
+      padding:18px;
+      width:100%;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+    }
+    .sponsor-logo{
       max-width:100%;
-      max-height:100%;
+      max-height:120px;
       width:auto;
       height:auto;
-      object-fit:contain;       /* ключ: показує весь логотип */
+      object-fit:contain;
       display:block;
-      padding:16px;             /* невелике поле навколо логотипу */
-      background:#0f1014;       /* легкий фон під лого */
+      filter:drop-shadow(0 4px 10px rgba(0,0,0,.8));
     }
 
-    .section h2{margin-bottom:18px}
+    .sponsor-meta{
+      position:absolute;
+      left:12px;
+      bottom:12px;
+      z-index:2;
+      display:flex;
+      align-items:center;
+      gap:6px;
+      padding:4px 9px;
+      border-radius:999px;
+      background:rgba(0,0,0,.6);
+      border:1px solid rgba(248,250,252,.18);
+      font-size:.75rem;
+      color:#e5e7eb;
+      backdrop-filter:saturate(140%) blur(3px);
+    }
+    .sponsor-meta span.bullet{
+      display:inline-flex;
+      width:16px;
+      height:16px;
+      border-radius:50%;
+      background:linear-gradient(135deg,#f6c34c,#b45309);
+    }
+
+    .sponsor-hover-tip{
+      position:absolute;
+      right:12px;
+      top:12px;
+      z-index:2;
+      padding:3px 8px;
+      border-radius:999px;
+      font-size:.7rem;
+      text-transform:uppercase;
+      letter-spacing:.08em;
+      background:rgba(15,23,42,.9);
+      border:1px solid rgba(148,163,184,.5);
+      color:#e5e7eb;
+      opacity:.0;
+      transform:translateY(-4px);
+      transition:opacity .18s ease, transform .18s ease;
+    }
+    .sponsor-card:hover .sponsor-hover-tip{
+      opacity:1;
+      transform:translateY(0);
+    }
+
+    /* Для шапки — прибираємо outline (як на інших сторінках) */
+    .header *:focus,
+    .header *:focus-visible,
+    .header a:focus,
+    .header a:focus-visible,
+    .header button:focus,
+    .header button:focus-visible{
+      outline:none !important;
+    }
   </style>
 </head>
 
@@ -73,25 +267,62 @@
 
 <main class="main">
   <section class="container section">
-    <h2>Партнери та Спонсори</h2>
 
-    <div class="grid grid-3">
+    <!-- HERO -->
+    <div class="sponsors-hero">
+      <div class="sponsors-kicker">
+        <span>SC</span> Партнери турніру
+      </div>
+      <h1 class="page-title title-gradient">
+        <span>Спонсори</span>
+        <span>STOLAR CARP</span>
+      </h1>
+      <p class="sponsors-lead">
+        Надійні бренди, які підтримують розвиток спортивного коропового рибальства.
+        Клікніть по логотипу, щоб перейти на сторінку партнера.
+      </p>
+    </div>
+
+    <!-- СІТКА СПОНСОРІВ -->
+    <div class="sponsors-grid">
 
       <!-- Pugach -->
-      <a class="card" href="https://puhach.com" target="_blank" rel="noopener">
-        <img class="s-logo" src="assets/sponsors/pugach.png" alt="Pugach Baits">
+      <a class="sponsor-card" href="https://puhach.com" target="_blank" rel="noopener">
+        <div class="sponsor-logo-wrap">
+          <img class="sponsor-logo" src="assets/sponsors/pugach.png" alt="Pugach Baits">
+        </div>
+        <div class="sponsor-meta">
+          <span class="bullet"></span>
+          <span>Pugach Baits</span>
+        </div>
+        <div class="sponsor-hover-tip">Перейти на сайт</div>
       </a>
 
       <!-- Винниківський Короповий Клуб -->
-      <a class="card" href="https://vkk.in.ua" target="_blank" rel="noopener">
-        <img class="s-logo" src="assets/sponsors/vkk.png" alt="Винниківський Короповий Клуб">
+      <a class="sponsor-card" href="https://vkk.in.ua" target="_blank" rel="noopener">
+        <div class="sponsor-logo-wrap">
+          <img class="sponsor-logo" src="assets/sponsors/vkk.png" alt="Винниківський Короповий Клуб">
+        </div>
+        <div class="sponsor-meta">
+          <span class="bullet"></span>
+          <span>Винниківський Короповий Клуб</span>
+        </div>
+        <div class="sponsor-hover-tip">Перейти на сайт</div>
       </a>
 
-      <!-- Приклад для додавання нового спонсора:
-      <a class="card" href="https://example.com" target="_blank" rel="noopener">
-        <img class="s-logo" src="assets/sponsors/example.png" alt="Назва спонсора">
+      <!-- ШАБЛОН ДЛЯ НОВИХ СПОНСОРІВ
+      <a class="sponsor-card" href="https://example.com" target="_blank" rel="noopener">
+        <div class="sponsor-logo-wrap">
+          <img class="sponsor-logo" src="assets/sponsors/example.png" alt="Назва спонсора">
+        </div>
+        <div class="sponsor-meta">
+          <span class="bullet"></span>
+          <span>Назва спонсора</span>
+        </div>
+        <div class="sponsor-hover-tip">Перейти на сайт</div>
       </a>
       -->
+
     </div>
   </section>
 </main>
